Mon Sep 13 09:11:53 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtkrange.c: fix gtk_range_real_change_value args. Addresses part
	of #152518.

2004-09-13  Matthias Clasen  <mclasen@redhat.com>

	Fix some problems reported by Morten Welinder:
	
	* gtk/gtkfilesystem.c: Include gtkmodules.h, not gtkmain.h, since
	the modules stuff moved.

	* gtk/gtkmain.c (gtk_arg_no_debug_cb): Add a missing return

	* gtk/gtksettings.c: Add missing include. 
	(settings_update_modules): Remove an unused variable.

2004-09-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
	Improve positioning of entry completion popup.

2004-09-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/makegtkalias.pl: 
	* gdk/makegdkalias.pl: Use the short prefix "IA__" for 
	aliases instead of the long suffix "__internal_alias". 

	* tests/testfilechooser.c (main): Update sensitivity of the "Select all"
	button.

Wed Sep  8 18:38:08 2004  Soeren Sandmann  <sandmann@redhat.com>

	Make dropping of expandable items look nicer.
	
	* gtk/gtktoolbar.c (gtk_toolbar_set_drop_highlight_item): Make
	placeholder expand if highlight item is expanding.

	* gtk/gtktoolbar.c (toolbar_content_set_expand): New function.

	* gtk/gtktoolbar.c (toolbar_content_get_expand): Return TRUE only
	if the item is not disappering.

2004-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Use the proper node type
	for placeholders in toolbars.  (#151963, Olivier Andrieu)

	* gtk/gtkstyle.c (gtk_default_draw_expander): Draw expanders a bit 
	better.

Sun Sep  5 17:14:16 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmain.c: 
	* gdk/gdk.c: 
	* gdk/x11/gdkmain-x11.c: 
	* gdk/win32/gdkmain-win32.c: Add descriptions for the 
	commandline arguments. The actual descriptions are mostly 
	taken from libbonoboui, so translators should be able to 
	copy existing translations from there.

2004-09-05  Anders Carlsson  <andersca@gnome.org>
